--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.2",
     "rxjs": "~6.2.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "^0.8.27"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.2",
+    "@angular-devkit/build-angular": "^0.8.9",
+    "@angular/cli": "^6.2.9",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "^2.8.14",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "angular-ide": "^0.9.55",
@@ -41,7 +41,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
