--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
     "lib": [
       "es2017",
       "dom"
+    ],
+    "plugins": [
+      { "name": "@angular/language-service"},
+      { "name": "tslint-language-service"}
     ]
   }
 }
